enumerateDevices() doesn't return correct list of devices after device was changed by user in a system preferences https://bugs.webkit.org/show_bug.cgi?id=203407 <rdar://problem/56648063>

Reviewed by Youenn Fablet.

Tested manually as this doesn't reproduce with mock capture devices.

* platform/mediastream/mac/CoreAudioCaptureDeviceManager.cpp:
(WebCore::CoreAudioCaptureDeviceManager::coreAudioCaptureDevices): Refresh the list of capture
devices when the default input device changes.
(WebCore::CoreAudioCaptureDeviceManager::refreshAudioCaptureDevices): Assert if not called
on the main thread.


Canonical link: https://commits.webkit.org/217158@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251992 268f45cc-cd09-0410-ab3c-d52691b4dbfc