Source/WebCore/platform/mediastream/mac/CoreAudioCaptureDeviceManager.cpp
@@ -36,6 +36,7 @@
 #include <CoreMedia/CMSync.h>
 #include <pal/spi/cf/CoreAudioSPI.h>
 #include <wtf/Assertions.h>
+#include <wtf/MainThread.h>
 #include <wtf/NeverDestroyed.h>
 
 #import <pal/cf/CoreMediaSoftLink.h>
@@ -122,15 +123,12 @@ Vector<CoreAudioCaptureDevice>& CoreAudioCaptureDeviceManager::coreAudioCaptureD
         refreshAudioCaptureDevices(NotifyIfDevicesHaveChanged::DoNotNotify);
 
         auto listener = ^(UInt32 count, const AudioObjectPropertyAddress properties[]) {
-            for (UInt32 i = 0; i < count; ++i) {
-                const AudioObjectPropertyAddress& property = properties[i];
+            bool notify = false;
+            for (UInt32 i = 0; i < count; ++i)
+                notify |= (properties[i].mSelector == kAudioHardwarePropertyDevices || properties[i].mSelector == kAudioHardwarePropertyDefaultInputDevice);
 
-                if (property.mSelector != kAudioHardwarePropertyDevices)
-                    continue;
-
+            if (notify)
                 CoreAudioCaptureDeviceManager::singleton().refreshAudioCaptureDevices(NotifyIfDevicesHaveChanged::Notify);
-                return;
-            }
         };
 
         AudioObjectPropertyAddress address = { kAudioHardwarePropertyDevices, kAudioObjectPropertyScopeGlobal, kAudioObjectPropertyElementMaster };
@@ -158,6 +156,8 @@ Optional<CoreAudioCaptureDevice> CoreAudioCaptureDeviceManager::coreAudioDeviceW
 
 void CoreAudioCaptureDeviceManager::refreshAudioCaptureDevices(NotifyIfDevicesHaveChanged notify)
 {
+    ASSERT(isMainThread());
+
     AudioObjectPropertyAddress address = { kAudioHardwarePropertyDevices, kAudioObjectPropertyScopeGlobal, kAudioObjectPropertyElementMaster };
     UInt32 dataSize = 0;
     auto err = AudioObjectGetPropertyDataSize(kAudioObjectSystemObject, &address, 0, nullptr, &dataSize);
